overflow on mob fixed

--- a/src/styles/blocks/content.scss
+++ b/src/styles/blocks/content.scss
@@ -23,7 +23,7 @@ background-position: 0 0;
   @include grid-design;
 
   &__section {
-    border: 1px solid red;
+
 
     &:not(:last-of-type) {
       @include mobile {
