--- a/src/styles/blocks/materials.scss
+++ b/src/styles/blocks/materials.scss
@@ -182,7 +182,7 @@ height: auto;
  font-weight: 400;
  line-height: normal;
  letter-spacing: 9px;
- padding:0 30px;
+ padding: 0 0 0 30px;
    }
 
 @include tablet {
